# ms-reservas/src/api/Components/mesa_component.py
@@ -6,7 +6,55 @@ from ...utils.general.response import internal_response
 class MesaComponent:
 
     @staticmethod
-    def mesas_disponibles_por_fecha(fecha):
+    def mesas_disponibles_por_fecha(fecha, franja_id=None):
+
+        try:
+            result = False
+            data = None
+            message = None
+
+            if franja_id:
+                sql = """
+                      SELECT m.id, m.numero, m.maxper
+                      FROM dawa.mesas m
+                      WHERE m.id NOT IN (SELECT idmesa \
+                                         FROM dawa.reservas \
+                                         WHERE fecha = %s \
+                                           AND franja_id = %s \
+                                           AND estado IN (0, 2))
+                        AND m.estado = 0
+                      ORDER BY m.numero \
+                      """
+                record = (fecha, franja_id)
+            else:
+                sql = """
+                      SELECT m.id, m.numero, m.maxper
+                      FROM dawa.mesas m
+                      WHERE m.id NOT IN (SELECT DISTINCT idmesa \
+                                         FROM dawa.reservas \
+                                         WHERE fecha = %s \
+                                           AND estado IN (0, 2))
+                        AND m.estado = 0
+                      ORDER BY m.numero \
+                      """
+                record = (fecha,)
+
+            result_query = DataBaseHandle.getRecords(sql, 0, record)
+
+            if result_query['result']:
+                data = result_query['data']
+                result = True
+            else:
+                message = result_query['message']
+
+        except Exception as ex:
+            HandleLogs.write_error(ex)
+            message = ex.__str__()
+        finally:
+            return internal_response(result, data, message)
+
+    @staticmethod
+    def listar_todas_mesas():
 
         try:
             result = False
@@ -14,16 +62,12 @@ class MesaComponent:
             message = None
 
             sql = """
-                  SELECT m.id, m.numero, m.maxper
+                  SELECT m.id, m.numero, m.maxper, m.idlocal, m.estado
                   FROM dawa.mesas m
-                  WHERE m.id NOT IN (SELECT idmesa \
-                                     FROM dawa.reservas \
-                                     WHERE fecha = %s \
-                                       AND estado = 0)
+                  WHERE m.estado = 0
                   ORDER BY m.numero \
                   """
-            record = (fecha,)
-            result_query = DataBaseHandle.getRecords(sql, 0, record)
+            result_query = DataBaseHandle.getRecords(sql, 0)
 
             if result_query['result']:
                 data = result_query['data']
